Update and rename black.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE>
 <html>
+	<body>
+	<head>
+		<title>Your System hacked By Black Internet </title>
+	</head>
 <div style="position: fixed; top: 75px; left: -225px; width: 600px; padding: 10px; font-size: 24px; text-align: center; color: white; font-family: 'trebuchet ms', verdana, arial, sans-serif;transform: rotate(-45deg);transform-origin: 50% 0px;-o-transform: rotate(-45deg); -o-transform-origin: 50% 0px;-moz-transform: rotate(-45deg); -moz-transform-origin: 50% 0px; -webkit-transform: rotate(-45deg); -webkit-transform-origin: 50% 0px; background-color: Transparent; border: 1px solid rgb(170, 170, 170); z-index: 9999; opacity: 0.5;"><a style="text-decoration:none;color:white;"><font color="white">Black</font> <font color="#ee7600">Internet</font></a></div>
 <div class="stars">
   <center>
@@ -460,4 +464,5 @@ var app = {
 
 document.addEventListener('DOMContentLoaded', app.init);
 </script>
+</body>
 </html>
